Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     
 </head>
 <body>
+
+    <!-- <img src="http://localhost:3000/imagen/productos/5eea5c5c493db52c48c05284-485.jpg/?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZWU2ODdiYzMxM2U0YjM5NzQ3OWVjODIiLCJub21icmUiOiJNYXJ0MiIsImVtYWlsIjoiMkBhLmNvbSIsIl9fdiI6MH0sImlhdCI6MTU5MjQxMTQxNiwiZXhwIjoxNTk1MDAzNDE2fQ.Dqb7ovZ0lLfxT58yLo880aCGTSdr98B3YxNniXIDC-8" alt=""> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
